<resources>
    <string name="app_name">PSU JobStream Employer</string>
    <string name="version_name">v0.3.4b</string>

    <string name="input_hint_email">Email</string>
    <string name="input_hint_password">Password</string>
    <string name="input_hint_confirm_password">Confirm Password</string>

    <string name="input_hint_current_password">Current Password</string>
    <string name="input_hint_new_password">New Password</string>
    <string name="input_hint_confirm_new_password">Confirm New Password</string>

    <string name="input_hint_psu_email">PSU Email</string>
    <string name="input_hint_business_name">Business Name</string>
    <string name="input_hint_business_email">Business Email</string>
    <string name="input_hint_business_website">Business Website</string>
    <string name="input_hint_business_description">Business Description</string>

    <string name="input_hint_link_title">Link Title</string>
    <string name="input_hint_insert_link">Place your link here</string>

    <string name="input_hint_search">Search</string>
    <string name="input_hint_message">Enter message</string>

    <string name="input_hint_title">Title</string>
    <string name="input_hint_keyword">Keywords</string>
    <string name="input_hint_description">Description</string>
    <string name="input_hint_location">Location</string>
    <string name="input_hint_salary">Salary</string>
    <string name="input_hint_type">Type</string>
    <string name="input_hint_requirements">Requirements</string>

    <string name="button_text_signin">Sign In</string>
    <string name="button_text_terms">Terms &amp; Conditions</string>
    <string name="button_text_policy">Privacy Policy</string>
    <string name="button_text_cancel">Cancel</string>
    <string name="button_text_ok">OK</string>
    <string name="button_text_no">No</string>
    <string name="button_text_yes">Yes</string>
    <string name="button_text_view_application">View Applications</string>
    <string name="button_text_settings_send_verification">Send Verification Email</string>
    <string name="button_text_settings_change_email">Change Email</string>
    <string name="button_text_settings_change_password">Change Password</string>
    <string name="button_text_settings_check_update">Check for Updates</string>

    <string name="label_text_settings_account">Account</string>
    <string name="label_text_settings_system">System</string>
    <string name="label_text_dashboard_posts">Posts</string>
    <string name="label_subtext_dashboard_posts">Job Posting Data</string>
    <string name="label_text_title_welcome">Welcome to</string>
    <string name="label_text_title_employers">for Employers</string>
    <string name="label_text_application_section">Job Applications</string>
    <string name="label_text_search_section3">People</string>
    <string name="label_text_vitae_skill">Skills</string>
    <string name="label_text_vitae_experience">Experience</string>
    <string name="label_text_note_keyword">Note: Only a minimum of five (5) keywords and maximum of ten (10) keywords are allowed.</string>

    <string name="toolbar_title_text_dashboard">Dashboard</string>
    <string name="toolbar_subtitle_text_dashboard">Welcome to PSU JobStream!</string>
    <string name="toolbar_title_text_home">Home</string>
    <string name="toolbar_subtitle_text_home">Welcome to PSU JobStream!</string>
    <string name="toolbar_title_text_search">Search</string>
    <string name="toolbar_subtitle_text_search">Look for People to Hire</string>
    <string name="toolbar_title_text_messages">Messages</string>
    <string name="toolbar_subtitle_text_messages">View Conversations</string>
    <string name="toolbar_title_text_profile">Profile</string>
    <string name="toolbar_subtitle_text_profile">View and Edit your Account Info</string>
    <string name="toolbar_title_text_about">About</string>
    <string name="toolbar_subtitle_text_about">About PSU JobStream</string>
    <string name="toolbar_title_text_settings">Settings</string>
    <string name="toolbar_subtitle_text_settings">Change System Options</string>
    <string name="toolbar_title_text_crop">Crop Image</string>
    <string name="toolbar_subtitle_text_crop">Select Image to Crop and Upload</string>
    <string name="toolbar_title_text_new_job_post">New Job Post</string>
    <string name="toolbar_title_text_job_post">Job Post</string>
    <string name="toolbar_title_text_job_posting">Job Postings</string>
    <string name="toolbar_subtitle_text_job_posting">View Your Job Postings</string>
    <string name="toolbar_title_text_announcement">Announcements</string>
    <string name="toolbar_subtitle_text_announcement">View Your Announcements</string>
    <string name="toolbar_subtitle_text_new_job_post">Create a New Job Posting</string>
    <string name="toolbar_title_text_new_announcement">New Announcement</string>
    <string name="toolbar_subtitle_text_new_announcement">Create a New Announcement</string>
    <string name="toolbar_title_text_user_profile">User Profile</string>
    <string name="toolbar_title_text_employer_profile">Employer Profile</string>

    <string name="dialog_title_alert">Alert</string>
    <string name="dialog_title_edit_profile">Edit Profile</string>
    <string name="dialog_subtitle_edit_profile">Change Your Profile Information</string>
    <string name="dialog_title_insert_link">Insert Link</string>
    <string name="dialog_subtitle_insert_link">Add a Hyperlink to Your Post</string>
    <string name="dialog_subtitle_delete_post">Delete Post</string>
    <string name="dialog_title_confirm_job_post">Confirm Job Post</string>
    <string name="dialog_subtitle_update_post">Update Post</string>
    <string name="dialog_subtitle_confirm_job_post">Review Job Posting Details</string>
    <string name="dialog_title_application_document">Application Documents</string>
    <string name="dialog_subtitle_application_document">Documents for Job Application</string>
    <string name="dialog_title_view_application">View Applications</string>
    <string name="dialog_subtitle_view_application">View Applications for this Post</string>
    <string name="dialog_title_change_email">Change Email</string>
    <string name="dialog_subtitle_change_email">Change Account Email</string>
    <string name="dialog_title_change_password">Change Password</string>
    <string name="dialog_subtitle_change_password">Enter New Password</string>
    <string name="dialog_title_send_message">Send Message</string>
    <string name="dialog_subtitle_send_message">Send a Private Message</string>

    <string name="dialog_alert_message_delete_post">Are you sure you want to delete this post?</string>
    <string name="dialog_alert_message_update_post">Are you sure you want to set this post\'s status to done?</string>

    <string name="text_or">or</string>
    <string name="text_comma">,</string>
    <string name="text_separator">•</string>
    <string name="text_peso">₱</string>
    <string name="text_quotation">\"</string>

    <string name="prompt_conversation">No conversations made yet.</string>
    <string name="prompt_application">No applications made yet.</string>
    <string name="prompt_skill">No skills available yet.</string>
    <string name="prompt_experience">No experiences available yet.</string>

    <string name="tip_title_search">How to Search?</string>
    <string name="tip_message_search">Enter keywords separated by comma \",\" inside the search field and click the search icon &#128269;. <br /> </string>

    <string name="button_text_announcement">Announcements</string>
    <string name="button_text_job_posting">Job Postings</string>
    <string name="button_text_about">About</string>
    <string name="button_text_signout">Sign Out</string>
    <string name="button_text_settings">Settings</string>
    <string name="button_text_delete">Delete</string>
    <string name="button_text_status">Status</string>
    <string name="button_text_header1">Header 1</string>
    <string name="button_text_header2">Header 2</string>
    <string name="button_text_header3">Header 3</string>
    <string name="button_text_header4">Header 4</string>
    <string name="button_text_header5">Header 5</string>
    <string name="button_text_header6">Header 6</string>

    <string-array name="type">
        <item>Casual</item>
        <item>Fixed-Term</item>
        <item>Job Order</item>
        <item>Regular</item>
        <item>Project</item>
        <item>Seasonal</item>
    </string-array>

    <string name="about_info_location">Palawan State University Main Campus, Bgy. Tiniguiban, Puerto Princesa City, Palawan, Philippines 5300</string>
    <string name="about_title_cpd">Career Placement &amp; Development Services</string>
    <string name="about_cpd_vina">Vina Karina Baaco</string>
    <string name="about_title_developers">Developers</string>
    <string name="about_developers_karla">Karla Elissa Flores</string>
    <string name="about_developers_mitzi">Mitzi Almira Garcia</string>
    <string name="about_developers_daryl">John Daryl Homecillo</string>
    <string name="about_developers_yves">Mattheo Yves Tamayor</string>
    <string name="about_title_special">Special Thanks</string>
    <string name="about_special_osas">PSU Office of Student Affairs &amp; Services</string>
    <string name="about_special_pitbi">Palawan International Technology Business Incubator (PITBI)</string>
    <string name="about_special_site">Society of Information Technology Enthusiasts - Palawan State University Student Chapter (PSU-SITE SC)</string>
    <string name="about_special_batchmates">PSU BSIT Batch 2022</string>

</resources>