<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/background_toolbar"
            app:layout_collapseMode="pin"
            app:layout_scrollFlags="scroll|enterAlways"
            app:navigationIcon="@drawable/ic_button_back"
            app:subtitle="@string/toolbar_subtitle_text_about"
            app:subtitleTextAppearance="@style/ToolbarSubtitleTextAppearance"
            app:subtitleTextColor="@color/text_color_light"
            app:title="@string/toolbar_title_text_about"
            app:titleTextAppearance="@style/ToolbarTitleTextAppearance"
            app:titleTextColor="@color/text_color_light" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:layout_gravity="center"
                    android:src="@drawable/psu_logo_full" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/jobstream_logo_full" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:fontFamily="@font/montserrat"
                    android:includeFontPadding="false"
                    android:text="@string/about_info_location"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:background="@color/color_primary" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/montserrat_bold"
                android:includeFontPadding="false"
                android:text="@string/about_title_cpd"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/montserrat"
                android:includeFontPadding="false"
                android:text="@string/about_cpd_vina"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/montserrat_bold"
                android:includeFontPadding="false"
                android:text="@string/about_title_developers"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/montserrat"
                android:includeFontPadding="false"
                android:text="@string/about_developers_karla"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/montserrat"
                android:includeFontPadding="false"
                android:text="@string/about_developers_mitzi"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/montserrat"
                android:includeFontPadding="false"
                android:text="@string/about_developers_daryl"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/montserrat"
                android:includeFontPadding="false"
                android:text="@string/about_developers_yves"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/montserrat_bold"
                android:includeFontPadding="false"
                android:text="@string/about_title_special"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="4dp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/montserrat"
                android:includeFontPadding="false"
                android:text="@string/about_special_osas"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="4dp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/montserrat"
                android:includeFontPadding="false"
                android:text="@string/about_special_pitbi"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="4dp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/montserrat"
                android:includeFontPadding="false"
                android:text="@string/about_special_site"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="4dp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/montserrat"
                android:includeFontPadding="false"
                android:text="@string/about_special_batchmates"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>