<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="50dp"
                    android:background="@color/color_primary"
                    android:padding="8dp"
                    android:src="@drawable/ic_input_password" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/color_on_primary"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:paddingHorizontal="16dp"
                        android:text="@string/dialog_title_change_email"
                        android:textColor="@color/text_color_light"
                        android:textSize="14sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:paddingHorizontal="16dp"
                        android:text="@string/dialog_subtitle_change_email"
                        android:textColor="@color/text_color_light"
                        android:textSize="12sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="16dp"
                        android:hint="@string/input_hint_psu_email"
                        app:boxCornerRadiusBottomEnd="32dp"
                        app:boxCornerRadiusBottomStart="32dp"
                        app:boxCornerRadiusTopEnd="32dp"
                        app:boxCornerRadiusTopStart="32dp"
                        app:boxStrokeColor="@color/color_primary"
                        app:hintEnabled="true"
                        app:startIconDrawable="@drawable/ic_input_email"
                        app:startIconTint="@color/color_primary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:fontFamily="@font/montserrat"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textColor="@color/text_color"
                            android:textCursorDrawable="@null" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="8dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:weightSum="10">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnCancel"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="5"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/button_text_cancel"
                            app:cornerRadius="32dp"
                            app:strokeColor="@color/color_primary" />

                        <Space
                            android:layout_width="8dp"
                            android:layout_height="match_parent" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnOk"
                            style="@style/Widget.MaterialComponents.Button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="5"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/button_text_ok"
                            android:textColor="@color/text_color_light"
                            app:cornerRadius="32dp" />

                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="8dp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>